Minusculas en nombre de paquete

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Aseenti/Validaciones",
+    "name": "aseenti/validaciones",
     "description": "Validaciones para los proyectos de Aseenti",
     "type": "library",
     "authors": [
