--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
             "email": "ing.ezpinoza@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "config": {
         "preferred-install": {
-            "*": "dev"
+            "*": "stable"
         },
         "optimize-autoloader": true
     },
